Add missing variable declarations in JavaScript code
This fixes errors reported by LGTM.

Signed-off-by: Stefan Weil <sw@weilnetz.de>

--- a/applications/luci-app-aria2/luasrc/view/aria2/overview_status.htm
+++ b/applications/luci-app-aria2/luasrc/view/aria2/overview_status.htm
@@ -27,7 +27,7 @@ function randomString(len) {
 	var $chars = 'abcdefghijklmnopqrstuvwxyz1234567890';
 	var maxPos = $chars.length;
 	var pwd = '';
-	for (i = 0; i < len; i++) {
+	for (var i = 0; i < len; i++) {
 		pwd += $chars.charAt(Math.floor(Math.random() * maxPos));
 	}
 	return pwd;
