luci-mod-admin-full: packages: remove old_lists detection
This is outdated and useless now.

Signed-off-by: CN_SZTL <cnsztl@project-openwrt.eu.org>

--- a/modules/luci-mod-admin-full/luasrc/view/admin_system/packages.htm
+++ b/modules/luci-mod-admin-full/luasrc/view/admin_system/packages.htm
@@ -74,13 +74,9 @@ end
 				</div>
 				<% end %>
 
-				<% if no_lists or old_lists then %>
+				<% if no_lists then %>
 				<div class="cbi-value">
-					<% if old_lists then %>
-						<%:Package lists are older than 24 hours%>
-					<% else %>
-						<%:No package lists available%>
-					<% end %>
+					<%:No package lists available%>
 					<input type="submit" name="update" href="#" class="cbi-button cbi-button-apply" style="margin-left:3em" value="<%:Update lists%>" />
 				</div>
 				<% end %>
