--- a/modules/luci-mod-admin-full/luasrc/view/cbi/wireless_modefreq.htm
+++ b/modules/luci-mod-admin-full/luasrc/view/cbi/wireless_modefreq.htm
@@ -24,7 +24,8 @@
 	var modes = [
 		'', 'Legacy', true,
 		'n', 'N', hwmodes.n,
-		'ac', 'AC', hwmodes.ac
+		'ac', 'AC', hwmodes.ac,
+		'ax', 'AX', hwmodes.ax
 	];
 
 	var htmodes = {
@@ -40,6 +41,12 @@
 			'VHT40', '40 MHz', htmodes.VHT40,
 			'VHT80', '80 MHz', htmodes.VHT80,
 			'VHT160', '160 MHz', htmodes.VHT160
+		],
+		'ax': [
+			'HE20', '20 MHz', htmodes.HE20,
+			'HE40', '40 MHz', htmodes.HE40,
+			'HE80', '80 MHz', htmodes.HE80,
+			'HE160', '160 MHz', htmodes.HE160
 		]
 	};
 
@@ -54,6 +61,10 @@
 		],
 		'ac': [
 			'11a', '5 GHz', true
+		],
+		'ax': [
+			'11g', '2.4 GHz', (channels['11g'].length > 3),
+			'11a', '5 GHz', (channels['11a'].length > 3)
 		]
 	};
 
@@ -124,7 +135,9 @@
 
 		cbi_set_values(mode, modes);
 
-		if (/VHT20|VHT40|VHT80|VHT160/.test(<%= luci.http.write_json(self.map:get(section, "htmode")) %>))
+		if (/HE20|HE40|HE80|HE160/.test(<%= luci.http.write_json(self.map:get(section, "htmode")) %>))
+			mode.value = 'ax';
+		else if (/VHT20|VHT40|VHT80|VHT160/.test(<%= luci.http.write_json(self.map:get(section, "htmode")) %>))
 			mode.value = 'ac';
 		else if (/HT20|HT40/.test(<%= luci.http.write_json(self.map:get(section, "htmode")) %>))
 			mode.value = 'n';
