--- a/modules/luci-mod-admin-full/luasrc/view/cbi/wireless_modefreq.htm
+++ b/modules/luci-mod-admin-full/luasrc/view/cbi/wireless_modefreq.htm
@@ -6,20 +6,36 @@
 	var htmodes  = <%= luci.http.write_json(self.htmodes) %>;
 
 	var channels = {
-		'11g': [
+		'2g': [
 			'auto', 'auto', true
 		],
-		'11a': [
+		'5g': [
 			'auto', 'auto', true
-		]
+		],
+		'6g': [],
+		'60g': []
 	};
 
-	for (var i = 0; i < freqlist.length; i++)
-		channels[(freqlist[i].mhz > 2484) ? '11a' : '11g'].push(
+	for (var i = 0; i < freqlist.length; i++) {
+		var band;
+
+		if (freqlist[i].mhz >= 2412 && freqlist[i].mhz <= 2484)
+			band = '2g';
+		else if (freqlist[i].mhz >= 5160 && freqlist[i].mhz <= 5885)
+			band = '5g';
+		else if (freqlist[i].mhz >= 5925 && freqlist[i].mhz <= 7125)
+			band = '6g';
+		else if (freqlist[i].mhz >= 58329 && freqlist[i].mhz <= 69120)
+			band = '60g';
+		else
+			continue;
+
+		channels[band].push(
 			freqlist[i].channel,
 			'%d (%d MHz)'.format(freqlist[i].channel, freqlist[i].mhz),
 			!freqlist[i].restricted
 		);
+	}
 
 	var modes = [
 		'', 'Legacy', true,
@@ -52,19 +68,19 @@
 
 	var bands = {
 		'':   [
-			'11g', '2.4 GHz', (channels['11g'].length > 3),
-			'11a', '5 GHz', (channels['11a'].length > 3)
+			'2g', '2.4 GHz', (channels['2g'].length > 3),
+			'5g', '5 GHz', (channels['5g'].length > 3)
 		],
 		'n':  [
-			'11g', '2.4 GHz', (channels['11g'].length > 3),
-			'11a', '5 GHz', (channels['11a'].length > 3)
+			'2g', '2.4 GHz', (channels['2g'].length > 3),
+			'5g', '5 GHz', (channels['5g'].length > 3)
 		],
 		'ac': [
-			'11a', '5 GHz', true
+			'5g', '5 GHz', true
 		],
 		'ax': [
-			'11g', '2.4 GHz', (channels['11g'].length > 3),
-			'11a', '5 GHz', (channels['11a'].length > 3)
+			'2g', '2.4 GHz', (channels['2g'].length > 3),
+			'5g', '5 GHz', (channels['5g'].length > 3)
 		]
 	};
 
@@ -146,10 +162,7 @@
 
 		cbi_toggle_wifi_mode(id);
 
-		if (/a/.test(<%= luci.http.write_json(self.map:get(section, "hwmode")) %>))
-			band.value = '11a';
-		else
-			band.value = '11g';
+		band.value = <%= luci.http.write_json(self.map:get(section, "band")) %>;
 
 		cbi_toggle_wifi_band(id);
 
