--- a/modules/luci-mod-admin-full/luasrc/view/cbi/wireless_modefreq.htm
+++ b/modules/luci-mod-admin-full/luasrc/view/cbi/wireless_modefreq.htm
@@ -25,7 +25,7 @@
 			band = '5g';
 		else if (freqlist[i].mhz >= 5925 && freqlist[i].mhz <= 7125)
 			band = '6g';
-		else if (freqlist[i].mhz >= 58329 && freqlist[i].mhz <= 69120)
+		else if (freqlist[i].mhz >= 58320 && freqlist[i].mhz <= 69120)
 			band = '60g';
 		else
 			continue;
@@ -69,7 +69,8 @@
 	var bands = {
 		'':   [
 			'2g', '2.4 GHz', (channels['2g'].length > 3),
-			'5g', '5 GHz', (channels['5g'].length > 3)
+			'5g', '5 GHz', (channels['5g'].length > 3),
+			'60g', '60 GHz', (channels['60g'].length > 0)
 		],
 		'n':  [
 			'2g', '2.4 GHz', (channels['2g'].length > 3),
