--- a/applications/luci-app-aria2/luasrc/view/aria2/settings_header.htm
+++ b/applications/luci-app-aria2/luasrc/view/aria2/settings_header.htm
@@ -39,7 +39,7 @@
 </fieldset>
 
 <script type="text/javascript">//<![CDATA[
-XHR.poll(5, '<%=url("admin/services/aria2/status")%>', null,
+XHR.poll(5, '<%=url("admin/nas/aria2/status")%>', null,
 	function(x, data) {
 		var tb = document.getElementById('aria2_status');
 		if (data && tb) {
