--- a/applications/luci-app-passwall/luasrc/view/passwall/global/status2.htm
+++ b/applications/luci-app-passwall/luasrc/view/passwall/global/status2.htm
@@ -91,7 +91,7 @@ local status = api.uci_get_type("global_other", "status", "")
 				<%:Baidu Connection%>
 			</label>
 			<div class="cbi-value-field">
-				<input type="button" class="cbi-button cbi-input-apply" value="<%:Check%>" onclick="return check_connect(this, 'baidu', 'www.baidu.com')" />
+				<input type="button" class="btn cbi-button cbi-button-apply" value="<%:Check%>" onclick="return check_connect(this, 'baidu', 'https://www.baidu.com')" />
 				<font id="_baidu_status"></font>
 			</div>
 		</div>
@@ -100,7 +100,7 @@ local status = api.uci_get_type("global_other", "status", "")
 				<%:Google Connection%>
 			</label>
 			<div class="cbi-value-field">
-				<input type="button" class="cbi-button cbi-input-apply" value="<%:Check%>" onclick="return check_connect(this, 'google', 'www.google.com/generate_204')" />
+				<input type="button" class="btn cbi-button cbi-button-apply" value="<%:Check%>" onclick="return check_connect(this, 'google', 'https://www.google.com/generate_204')" />
 				<font id="_google_status"></font>
 			</div>
 		</div>
@@ -109,7 +109,7 @@ local status = api.uci_get_type("global_other", "status", "")
 				<%:GitHub Connection%>
 			</label>
 			<div class="cbi-value-field">
-				<input type="button" class="cbi-button cbi-input-apply" value="<%:Check%>" onclick="return check_connect(this, 'github', 'https://github.com')" />
+				<input type="button" class="btn cbi-button cbi-button-apply" value="<%:Check%>" onclick="return check_connect(this, 'github', 'https://github.com')" />
 				<font id="_github_status"></font>
 			</div>
 		</div>
@@ -118,7 +118,7 @@ local status = api.uci_get_type("global_other", "status", "")
 				<%:Instagram Connection%>
 			</label>
 			<div class="cbi-value-field">
-				<input type="button" class="btn cbi-button cbi-button-apply" value="<%:Check%>" onclick="return check_connect(this, 'instagram', 'http://www.instagram.com')" />
+				<input type="button" class="btn cbi-button cbi-button-apply" value="<%:Check%>" onclick="return check_connect(this, 'instagram', 'https://www.instagram.com')" />
 				<font id="_instagram_status"></font>
 			</div>
 		</div>
@@ -128,9 +128,9 @@ local status = api.uci_get_type("global_other", "status", "")
 				<%:Node Check%>
 			</label>
 			<div class="cbi-value-field">
-				<input type="button" class="cbi-button cbi-input-apply" value="<%:Check%>" onclick="return check_port(this)" />
+				<input type="button" class="btn cbi-button cbi-button-apply" value="<%:Check%>" onclick="return check_port(this)" />
 				<font id="_node_status"></font>
-				<input id="clear_check_port_btn" type="button" class="cbi-button cbi-button-remove" style="display:none" value="<%:Clear%>" onclick="return clear_check_port(this)" />
+				<input id="clear_check_port_btn" type="button" class="btn cbi-button cbi-button-remove" style="display:none" value="<%:Clear%>" onclick="return clear_check_port(this)" />
 			</div>
 		</div>
 		<% end %>
@@ -138,7 +138,7 @@ local status = api.uci_get_type("global_other", "status", "")
 		<div class="cbi-value">
 			<label class="cbi-value-title"></label>
 			<div class="cbi-value-field">
-				<input type="button" class="cbi-button cbi-input-reload" value="IP111.cn" onclick="javascript:window.open('http://www.ip111.cn/','target');" />
+				<input type="button" class="btn cbi-button cbi-button-reload" value="IP111.cn" onclick="javascript:window.open('http://www.ip111.cn/','target');" />
 			</div>
 		</div>
 		<% end %>
