--- a/applications/luci-app-turboacc/luasrc/view/turboacc/status.htm
+++ b/applications/luci-app-turboacc/luasrc/view/turboacc/status.htm
@@ -15,10 +15,10 @@
 	var dnscaching_state = document.getElementById('_dnscaching_state');
 	XHR.poll(5, '<%=luci.dispatcher.build_url("admin", "network", "turboacc", "status")%>', null, function(x, status) {
 		if ( x && x.status == 200 ) {
-			fastpath_state.innerHTML = status.fastpath_state ? '<em><b><font color=green><%=luci.sys.exec("/etc/init.d/turboacc check_status fastpath")%></font></b></em>' : '<em><b><font color=red><%:NOT RUNNING%></font></b></em>';
-			fullconenat_state.innerHTML = status.fullconenat_state ? '<em><b><font color=green><%:RUNNING%></font></b></em>' : '<em><b><font color=red><%:NOT RUNNING%></font></b></em>';
-			bbr_state.innerHTML = status.bbr_state ? '<em><b><font color=green><%:RUNNING%></font></b></em>' : '<em><b><font color=red><%:NOT RUNNING%></font></b></em>';
-			dnscaching_state.innerHTML = status.dnscaching_state ? '<em><b><font color=green><%:RUNNING%></font></b></em>' : '<em><b><font color=red><%:NOT RUNNING%></font></b></em>';
+			fastpath_state.innerHTML = status.fastpath_state ? '<em><b style=color:green><%=luci.sys.exec("/etc/init.d/turboacc check_status fastpath")%></b></em>' : '<em><b style=color:red><%:NOT RUNNING%></b></em>';
+			fullconenat_state.innerHTML = status.fullconenat_state ? '<em><b style=color:green><%:RUNNING%></b></em>' : '<em><b style=color:red><%:NOT RUNNING%></b></em>';
+			bbr_state.innerHTML = status.bbr_state ? '<em><b style=color:green><%:RUNNING%></b></em>' : '<em><b style=color:red><%:NOT RUNNING%></b></em>';
+			dnscaching_state.innerHTML = status.dnscaching_state ? '<em><b style=color:green><%:RUNNING%></b></em>' : '<em><b style=color:red><%:NOT RUNNING%></b></em>';
 		}
 	});
 //]]>
