luci-theme-bootstrap-mod: sync with upstream source
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>
(cherry picked from commit bc7fccdd43483a50e57293bbe1ca134bd102a478)

--- a/themes/luci-theme-bootstrap-mod/luasrc/view/themes/bootstrap_mod/footer.htm
+++ b/themes/luci-theme-bootstrap-mod/luasrc/view/themes/bootstrap_mod/footer.htm
@@ -19,7 +19,18 @@
  </body>
 </html>
 <script>
-	window.onload = function(){
+	function addLoadEvent(func) {
+		var oldonload = window.onload;
+		if (typeof window.onload != 'function') {
+			window.onload = func;
+		} else {
+			window.onload = function () {
+				oldonload();
+				func();
+			}
+		}
+	}
+	addLoadEvent(function(){
 		var content = document.getElementsByName("content");
 		var luci_username = document.getElementsByName("luci_username");
 		var luci_password = document.getElementsByName("luci_password");
@@ -49,6 +60,6 @@
 				}
 			}
 		}
-	}
+	});
 </script>
 </html>
